--- a/0306191062_vohoangphuc/Areas/Admin/Views/HoaDons/ThongKe.cshtml
+++ b/0306191062_vohoangphuc/Areas/Admin/Views/HoaDons/ThongKe.cshtml
@@ -135,7 +135,7 @@
                                     </tr>
                                 </thead>                               
                                     <tbody>                                    
-                                    @foreach (var item in ViewBag.lstSPBanChay)
+                                   @* @foreach (var item in ViewBag.lstSPBanChay)
                                         {
                                         <tr>
                                             <td>
@@ -151,7 +151,7 @@
                                                 @item.Total
                                             </td>                                               
                                         </tr>
-                                     }
+                                     }*@
                                     </tbody>                                
                             </table>
                         </div>
