--- a/0306191062_vohoangphuc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/0306191062_vohoangphuc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
                 <a class="sidebar-brand brand-logo" href="index.html"><img src="~/admin/assets/images/logo.svg" alt="logo" /></a>
-                <a class="sidebar-brand brand-logo-mini" href="index.html">
+                <a  class="sidebar-brand brand-logo-mini">
                     <img src="~/admin/assets/images/logo-mini.svg"
                          alt="logo" />
                 </a>
